# ami

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: タスク追加.md  不具合報告.md  機能要望.md
.github/workflows/: pre-commit.yaml  test.yaml
ami/: __init__.py  hydra_instantiators.py  logger.py  omegaconf_resolvers.py  system_event_callback_mixin.py  tensorboard_logger.py  tensorboard_loggers.py  time.py  utils.py
ami/checkpointing/: __init__.py  checkpoint_schedulers.py  checkpointing.py  save_and_load_state_mixin.py
ami/data/: README.md  __init__.py  data_buffers.py  data_pools.py  interfaces.py  step_data.py  utils.py
ami/environment/: __init__.py  actuators.py  environments.py  sensors.py
ami/environments/: README.md  __init__.py  _types.py  actuators.py  base_environment.py  environments.py  sensor_actuator_env.py
ami/interactions/: base_interaction.py  fixed_interval_interaction.py  interaction.py  interval_adjustors.py  simple_interation.py
ami/models/: README.md  __init__.py  action_predictor.py  aggregations.py  base_model.py  bool_mask_audio_jepa.py  bool_mask_i_jepa.py  csv_files_policy.py  forward_dynamics.py  hifigan_discriminators.py  hifigan_generator.py  i_jepa.py  i_jepa_latent_visualization_decoder.py  instantiations.py  inverse_dynamics.py  latent_visualization_decoder.py  model_names.py  model_wrapper.py  multi_embeddings.py  policy_or_value_network.py  policy_value_common_net.py  temporal_encoder.py  utils.py  vae.py  vae_wrapper.py
ami/tensorboard_logger/: step_interval_logger.py  tensorboard_logger.py  time_interval_logger.py
ami/threads/: __init__.py  background_thread.py  base_thread.py  base_threads.py  inference_thread.py  main_thread.py  shared_object_names.py  shared_object_pool.py  thread_control.py  thread_types.py  training_thread.py  utils.py  web_api_handler.py
ami/trainers/: base_trainer.py  base_trainer_new.py  bool_mask_audio_jepa_trainer.py  bool_mask_i_jepa_trainer.py  dreaming_policy_value_trainer.py  forward_dynamics_trainer.py  hifigan_trainer.py  i_jepa_latent_visualization_trainer.py  i_jepa_trainer.py  image_vae_trainer.py  multimodal_temporal_encoder_trainer.py  ppo_dreaming_policy_trainer.py  ppo_dreaming_policy_value_trainer.py  ppo_policy_trainer.py  utils.py
configs/: launch.yaml
configs/checkpointing/: default.yaml
configs/data_collectors/: audio.yaml  dynamics.yaml  image.yaml  image_dynamics.yaml  image_dynamics_dreaming.yaml  image_dynamics_ppo.yaml  multimodal_temporal_dynamics_ppo.yaml  symmetric_pi_f.yaml
configs/devices/: cpu.yaml  cuda.yaml  mps.yaml
configs/experiment/: bool_mask_audio_jepa.yaml  bool_mask_audio_jepa_with_dataset.yaml  bool_mask_i_jepa.yaml  bool_mask_i_jepa_with_dataset.yaml  bool_mask_i_jepa_with_videos.yaml  dreamer.yaml  dreamer_multi_step_imagination.yaml  dreamer_multi_step_imagination_unity.yaml  dreamer_unity.yaml  example.yaml  i_jepa.yaml  i_jepa_mean_patch_sioconv_ppo_multi_step.yaml  i_jepa_mean_patch_with_videos.yaml  i_jepa_sioconv_dreamer_multi_step.yaml  i_jepa_sioconv_dreamer_multi_step_unity.yaml  i_jepa_sioconv_ppo_fundamental.yaml  i_jepa_sioconv_ppo_fundamental_blackout.yaml  i_jepa_sioconv_ppo_fundamental_flickerimage.yaml  i_jepa_sioconv_ppo_fundamental_whitenoize.yaml  i_jepa_sioconv_ppo_fundamental_whitenoize_avgpool.yaml  i_jepa_with_dataset.yaml  (+16 more)
docs/: overall.md
obs_settings/: AMISceneCollection.json
samples/: first_order_delay_system_discrete_actuator_demo.py  logging.yaml  logging_demo.py  unity_environment_demo.py  web_api_demo.py
scripts/: add-dev-users.sh  auto-cycle-restart-vrchat.sh  auto-mount.sh  auto_control_vrchat_menu.py  ch-time-scale.sh  console.py  copy-vrchat-logs.sh  equidistant_audio_chunk_sampler.py  equidistant_video_frame_sampler.py.py  generate_audio_validation_data.sh  i_jepa_mask_region_simulation.py  install_protonge.sh  launch.py  multi-run.sh  obs_vrchat_setup.py  play_imagination_world.py  requirements_auto_control_vrchat_menu.txt  restart-vrchat.sh  run_audio_chunk_sampler.sh  run_experiment_bool_mask_i_jepa_with_videos.sh  run_experiment_gamma_scale.sh  setup-computer-ubuntu22.04.sh  show_microphones.py  show_reconstruction.py  start-xvfb.sh  video_action_recorder.py
tests/: conftest.py  helpers.py  test_configs.py  test_hydra_instantiators.py  test_logger.py  test_omegaconf_resolvers.py  test_tensorboard_logger.py  test_tensorboard_loggers.py  test_time.py  test_utils.py  test_version.py
unity_executables/: .gitkeep
(+398 files in other folders)
