[tool.poetry]
name = "ami"
version = "2024.05.0" # CalVer. After updated your version, you have to run `poetry install` again.
description = "AMI: Autonomous Machine Intelligence"
authors = ["Geson Anko <X(Twitter)@GesonAnkoVR>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
numpy = "^1.26.2"
torchvision = "^0.17.0"
rootutils = "^1.0.7"
bottle = "^0.12.25"
webtest = "^3.0.0"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
vrchat-io = {git = "https://github.com/Geson-anko/vrchat-io.git", rev = "main"}
tensorboard = "2.15.0"
einops = "^0.8.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-slow = "^0.0.3"
pytest-mock = "^3.12.0"
mypy = "^1.8.0"
types-pyyaml = "^6.0.12.12"
requests = "^2.31.0"
types-requests = "^2.31.0.20240406"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"

minversion = "6.0"
testpaths = "tests/"


[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.11"
implicit_reexport = true
disallow_untyped_calls = false
disable_error_code = "no-any-return"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
