[tool.poetry]
name = "ami"
version = "2024.05.0" # CalVer. After updated your version, you have to run `poetry install` again.
description = "AMI: Autonomous Machine Intelligence"
authors = ["Geson Anko <X(Twitter)@GesonAnkoVR>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.1,<=3.10.12"
torch = ">=2.2.2,<2.3.0"
numpy = "^1.21.2"
torchvision = "^0.17.0"
rootutils = "^1.0.7"
bottle = "^0.12.25"
webtest = "^3.0.0"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
vrchat-io = {git = "https://github.com/Geson-anko/vrchat-io.git", rev = "0.1.3"}
tensorboard = "2.15.0"
einops = "^0.8.0"
h5py = "^3.11.0"
mlagents-envs = {git = "https://github.com/MLShukai/ml-agents.git", subdirectory = "ml-agents-envs", rev = "develop"}
hydra-joblib-launcher = "^1.2.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
soundfile = "^0.12.1"
python-dotenv = "^1.0.1"
tensordict = "0.3.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^7.4.3"
pytest-slow = "^0.0.3"
pytest-mock = "^3.12.0"
mypy = "^1.12.1"
types-pyyaml = "^6.0.12.12"
requests = "^2.31.0"
types-requests = "^2.31.0.20240406"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"

minversion = "6.0"
testpaths = "tests/"


[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.10"
implicit_reexport = true
disallow_untyped_calls = false
disable_error_code = "no-any-return"
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
